// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flux emulator config editing should add an adapter with params to a feed 1`] = `
Array [
  Object {
    "address": "0x0000000000000000000000000000000000000003",
    "category": "test",
    "contractVersion": 4,
    "data": {
      "from": "TEST4",
      "source": "sourceName4",
      "to": "THIS4",
    },
    "deviationThreshold": 2,
    "name": "TEST4 / THIS4 source=sourceName4",
    "nodes": Array [
      Object {
        "address": "0x0000000000000000000000000000000000000003",
        "dataProviders": Array [
          "ea-compositeName4",
        ],
        "name": "nodeName",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
]
`;

exports[`flux emulator config editing should add an adapter with params to a feed 2`] = `
Array [
  Object {
    "address": "0x0000000000000000000000000000000000000003",
    "category": "test",
    "contractVersion": 4,
    "data": {
      "from": "TEST4",
      "source": "sourceName4",
      "to": "THIS4",
    },
    "deviationThreshold": 2,
    "name": "TEST4 / THIS4 source=sourceName4",
    "nodes": Array [
      Object {
        "address": "0x0000000000000000000000000000000000000003",
        "dataProviders": Array [
          "ea-compositeName4",
        ],
        "name": "nodeName",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
]
`;

exports[`flux emulator config editing should add an adpater to a feed 1`] = `
Array [
  Object {
    "address": "0x0000000000000000000000000000000000000000",
    "contractVersion": 4,
    "data": {
      "from": "TEST",
      "to": "THIS",
    },
    "deviationThreshold": 2,
    "name": "TEST / THIS",
    "nodes": Array [
      Object {
        "address": "0x0000000000000000000000000000000000000000",
        "dataProviders": Array [
          "ea-adapterName2",
        ],
        "name": "nodeName",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
  Object {
    "address": "0x0000000000000000000000000000000000000000",
    "contractVersion": 4,
    "data": {
      "from": "TEST2",
      "to": "THIS2",
    },
    "deviationThreshold": 2,
    "name": "TEST2 / THIS2",
    "nodes": Array [
      Object {
        "address": "0x0000000000000000000000000000000000000000",
        "dataProviders": Array [
          "ea-adapterName2",
        ],
        "name": "nodeName",
      },
      Object {
        "address": "0x0000000000000000000000000000000000000002",
        "dataProviders": Array [
          "ea-adapterName2",
        ],
        "name": "nodeName2",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
]
`;

exports[`flux emulator config editing should add an adpater to a feed 2`] = `
Array [
  Object {
    "address": "0x0000000000000000000000000000000000000000",
    "contractVersion": 4,
    "data": {
      "from": "TEST",
      "to": "THIS",
    },
    "deviationThreshold": 2,
    "name": "TEST / THIS",
    "nodes": Array [
      Object {
        "address": "0x0000000000000000000000000000000000000000",
        "dataProviders": Array [
          "ea-adapterName2",
        ],
        "name": "nodeName",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
  Object {
    "address": "0x0000000000000000000000000000000000000000",
    "contractVersion": 4,
    "data": {
      "from": "TEST2",
      "to": "THIS2",
    },
    "deviationThreshold": 2,
    "name": "TEST2 / THIS2",
    "nodes": Array [
      Object {
        "address": "0x0000000000000000000000000000000000000000",
        "dataProviders": Array [
          "ea-adapterName2",
        ],
        "name": "nodeName",
      },
      Object {
        "address": "0x0000000000000000000000000000000000000002",
        "dataProviders": Array [
          "ea-adapterName2",
        ],
        "name": "nodeName2",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
]
`;

exports[`flux emulator config editing should add an adpater to a feed 3`] = `
Array [
  Object {
    "address": "0x0000000000000000000000000000000000000000",
    "contractVersion": 4,
    "data": {
      "from": "TEST",
      "to": "THIS",
    },
    "deviationThreshold": 2,
    "name": "TEST / THIS",
    "nodes": Array [
      Object {
        "address": "0x0000000000000000000000000000000000000000",
        "dataProviders": Array [
          "ea-adapterName2",
          "ea-adapterName1",
        ],
        "name": "nodeName",
      },
      Object {
        "address": "0x0000000000000000000000000000000000000002",
        "dataProviders": Array [
          "ea-adapterName1",
        ],
        "name": "nodeName2",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
  Object {
    "address": "0x0000000000000000000000000000000000000000",
    "contractVersion": 4,
    "data": {
      "from": "TEST2",
      "to": "THIS2",
    },
    "deviationThreshold": 2,
    "name": "TEST2 / THIS2",
    "nodes": Array [
      Object {
        "address": "0x0000000000000000000000000000000000000000",
        "dataProviders": Array [
          "ea-adapterName2",
          "ea-adapterName1",
        ],
        "name": "nodeName",
      },
      Object {
        "address": "0x0000000000000000000000000000000000000002",
        "dataProviders": Array [
          "ea-adapterName2",
        ],
        "name": "nodeName2",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
]
`;

exports[`flux emulator config editing should convert the config to a k6 payload 1`] = `
Array [
  Object {
    "data": "{\\"data\\":{\\"from\\":\\"TEST\\",\\"to\\":\\"THIS\\"}}",
    "id": "86f45dcc-90db-4c39-b385-53945c5a9a30",
    "method": "POST",
    "name": "TEST / THIS",
  },
  Object {
    "data": "{\\"data\\":{\\"from\\":\\"TEST2\\",\\"to\\":\\"THIS2\\"}}",
    "id": "86f45dcc-90db-4c39-b385-53945c5a9a30",
    "method": "POST",
    "name": "TEST2 / THIS2",
  },
  Object {
    "data": "{\\"data\\":{\\"from\\":\\"TEST3\\",\\"to\\":\\"THIS3\\"}}",
    "id": "86f45dcc-90db-4c39-b385-53945c5a9a30",
    "method": "POST",
    "name": "TEST3 / THIS3",
  },
]
`;

exports[`flux emulator config editing should fail if the post of the config is unsuccessful 1`] = `[Error: Request failed with status code 500]`;

exports[`flux emulator config editing should parse a feed 1`] = `
Array [
  ReferenceContractConfig {
    "address": "0x0000000000000000000000000000000000000000",
    "category": "test",
    "contractVersion": 4,
    "data": {
      "from": "TEST",
      "to": "THIS",
    },
    "deviationThreshold": 2,
    "name": "TEST / THIS",
    "nodes": Array [
      FeedNode {
        "address": "0x0000000000000000000000000000000000000000",
        "dataProviders": Array [
          "adapterName1",
          "adapterName2",
        ],
        "name": "nodeName",
      },
      FeedNode {
        "address": "0x0000000000000000000000000000000000000002",
        "dataProviders": Array [
          "adapterName1",
        ],
        "name": "nodeName2",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
  ReferenceContractConfig {
    "address": "0x0000000000000000000000000000000000000000",
    "category": "test",
    "contractVersion": 4,
    "data": {
      "from": "TEST2",
      "to": "THIS2",
    },
    "deviationThreshold": 2,
    "name": "TEST2 / THIS2",
    "nodes": Array [
      FeedNode {
        "address": "0x0000000000000000000000000000000000000000",
        "dataProviders": Array [
          "adapterName1",
          "adapterName2",
        ],
        "name": "nodeName",
      },
      FeedNode {
        "address": "0x0000000000000000000000000000000000000002",
        "dataProviders": Array [
          "adapterName2",
        ],
        "name": "nodeName2",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
  ReferenceContractConfig {
    "address": "0x0000000000000000000000000000000000000003",
    "category": "test",
    "contractVersion": 4,
    "data": {
      "from": "TEST3",
      "to": "THIS3",
    },
    "deviationThreshold": 2,
    "name": "TEST3 / THIS3",
    "nodes": Array [
      FeedNode {
        "address": "0x0000000000000000000000000000000000000003",
        "dataProviders": Array [
          "adapterName3",
        ],
        "name": "nodeName",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
  ReferenceContractConfig {
    "address": "0x0000000000000000000000000000000000000003",
    "category": "test",
    "contractVersion": 4,
    "data": {
      "from": "TEST4",
      "to": "THIS4",
    },
    "deviationThreshold": 2,
    "name": "TEST4 / THIS4",
    "nodes": Array [
      FeedNode {
        "address": "0x0000000000000000000000000000000000000003",
        "dataProviders": Array [
          "compositeName4?source=sourceName4",
        ],
        "name": "nodeName",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
]
`;

exports[`flux emulator config editing should remove an adapter from a feed 1`] = `
Array [
  ReferenceContractConfig {
    "address": "0x0000000000000000000000000000000000000000",
    "contractVersion": 4,
    "data": {
      "from": "TEST",
      "to": "THIS",
    },
    "deviationThreshold": 2,
    "name": "TEST / THIS",
    "nodes": Array [
      Object {
        "address": "0x0000000000000000000000000000000000000000",
        "dataProviders": Array [
          "adapterName2",
        ],
        "name": "nodeName",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
  ReferenceContractConfig {
    "address": "0x0000000000000000000000000000000000000000",
    "contractVersion": 4,
    "data": {
      "from": "TEST2",
      "to": "THIS2",
    },
    "deviationThreshold": 2,
    "name": "TEST2 / THIS2",
    "nodes": Array [
      Object {
        "address": "0x0000000000000000000000000000000000000000",
        "dataProviders": Array [
          "adapterName2",
        ],
        "name": "nodeName",
      },
      Object {
        "address": "0x0000000000000000000000000000000000000002",
        "dataProviders": Array [
          "adapterName2",
        ],
        "name": "nodeName2",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
  ReferenceContractConfig {
    "address": "0x0000000000000000000000000000000000000003",
    "contractVersion": 4,
    "data": {
      "from": "TEST3",
      "to": "THIS3",
    },
    "deviationThreshold": 2,
    "name": "TEST3 / THIS3",
    "nodes": Array [
      Object {
        "address": "0x0000000000000000000000000000000000000003",
        "dataProviders": Array [
          "adapterName3",
        ],
        "name": "nodeName",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
]
`;

exports[`flux emulator config editing should remove an adapter from a feed 2`] = `
Array [
  ReferenceContractConfig {
    "address": "0x0000000000000000000000000000000000000000",
    "contractVersion": 4,
    "data": {
      "from": "TEST",
      "to": "THIS",
    },
    "deviationThreshold": 2,
    "name": "TEST / THIS",
    "nodes": Array [
      Object {
        "address": "0x0000000000000000000000000000000000000000",
        "dataProviders": Array [
          "adapterName2",
        ],
        "name": "nodeName",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
  ReferenceContractConfig {
    "address": "0x0000000000000000000000000000000000000000",
    "contractVersion": 4,
    "data": {
      "from": "TEST2",
      "to": "THIS2",
    },
    "deviationThreshold": 2,
    "name": "TEST2 / THIS2",
    "nodes": Array [
      Object {
        "address": "0x0000000000000000000000000000000000000000",
        "dataProviders": Array [
          "adapterName2",
        ],
        "name": "nodeName",
      },
      Object {
        "address": "0x0000000000000000000000000000000000000002",
        "dataProviders": Array [
          "adapterName2",
        ],
        "name": "nodeName2",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
]
`;

exports[`flux emulator config editing should remove an adapter from a feed 3`] = `Array []`;
